<resources>
    <string name="app_name">Здравствую.рф</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">Общие сведения</string>
    <string name="action_docs">Мои мед документы</string>
    <string name="action_hel">Здоровье в цифрах</string>
    <string name="action_store">Магазин</string>
    <string name="action_service">Сервисы</string>
    <string name="action_help">Служба поддержки</string>
    <string name="action_info">Информация</string>
    <string name="title_activity_registration">Здравствую.рф</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Вход</string>
    <string name="number">Телефон</string>
    <string name="enterPh">Введите телефон</string>
    <string name="enterCd">Введите код</string>
    <string name="enterPass">Введите пароль</string>
    <string name="repeatPass">Повторите пароль</string>
    <string name="endReg">Завершить регистрацию</string>
    <string name="password">Пароль</string>
    <string name="download">Загрузить документ</string>
    <string name="temperature">Температура</string>
    <string name="weigh">Вес</string>
    <string name="sugar">Сахар</string>
    <string name="cholesterol">Холестерин</string>
    <string name="pressure">Давление</string>
    <string name="nulls">0</string>
    <string name="next">Продолжить</string>
    <string name="regend">Регистрация завершена!</string>
    <string name="please">Пожалуйста ответьте на 17 вопросов,</string>
    <string name="going_test">чтобы мы могли дать вам рекомендации</string>
    <string name="undo">Назад</string>
    <string name="test_title">Тест для составления индивидуального списка анализов</string>
    <string name="qwest1">Вопрос 1 из 17</string>
    <string name="qwest2">Вопрос 2 из 17</string>
    <string name="qwest3">Вопрос 3 из 17</string>
    <string name="qwest4">Вопрос 4 из 17</string>
    <string name="qwest5">Вопрос 5 из 17</string>
    <string name="qwest6">Вопрос 6 из 17</string>
    <string name="qwest7">Вопрос 7 из 17</string>
    <string name="qwest8">Вопрос 8 из 17</string>
    <string name="qwest9">Вопрос 9 из 17</string>
    <string name="qwest10">Вопрос 10 из 17</string>
    <string name="qwest11">Вопрос 11 из 17</string>
    <string name="qwest12">Вопрос 12 из 17</string>
    <string name="qwest13">Вопрос 13 из 17</string>
    <string name="qwest14">Вопрос 14 из 17</string>
    <string name="qwest15">Вопрос 15 из 17</string>
    <string name="qwest16">Вопрос 16 из 17</string>
    <string name="qwest17">Вопрос 17 из 17</string>
    <string name="get_code">Получить код</string>
    <string name="get_fm">Ваш пол:</string>
    <string name="get_age">Дата рождения:</string>
    <string name="get_height">Рост:</string>
    <string name="get_weight">Вес:</string>
    <string name="get_skill">Образование:</string>
    <string name="get_work">Работа:</string>
    <string name="get_smoke">Курение:</string>
    <string name="get_alcohol">Алкоголь:</string>
    <string name="get_sp">Семейное положение:</string>
    <string name="get_child">Дети:</string>
    <string name="get_sport">Занятия спортом или фитнесом:</string>
    <string name="get_eat">Как бы Вы оценили свое питание?</string>
    <string name="get_sleep">Сон:</string>
    <string name="get_il">Как часто вы болеете просутдными заболеваниями?</string>
    <string name="get_death">Причины смерти кровных родственников (родители, дедушки, бабушки, братья. сестры ):</string>
    <string name="get_hospital">Когда в последний раз проходили профилактический медосмотр?</string>
    <string name="get_qw_hospital">Что вам мешает заниматься профилактикой здоровья?</string>
    <string name="male">Мужской</string>
    <string name="famale">Женский</string>
    <string name="non_normal">Незаконченное среднее</string>
    <string name="normal">Среднее</string>
    <string name="special">Специальное</string>
    <string name="hight">Высшее</string>
    <string name="since">Ученая степень</string>
    <string name="boss">Руководящая</string>
    <string name="t_work">Творческая</string>
    <string name="office">Офисная</string>
    <string name="fizical">Физически тяжелая</string>
    <string name="not_good">Вредная</string>
    <string name="on_foot">На ногах</string>
    <string name="none_work">Не работаю</string>
    <string name="not_is_it">Ничего из перечисленного</string>
    <string name="never_smoke">Не курю и не курил</string>
    <string name="not_smoke">Курил и бросил</string>
    <string name="easy_smoke">Курю иногда немного</string>
    <string name="hard_smoke">Курю каждый день</string>
    <string name="not_alcohol">Не пью совсем</string>
    <string name="easy_alcohol">Пью иногда</string>
    <string name="hard_alcohol">Пью каждый день</string>
    <string name="alone">Живу один</string>
    <string name="with_girlfriend">Живу с супругой</string>
    <string name="with_parents">Живу с родителями</string>
    <string name="NO">Нет</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three_or_more">3 или больше</string>
    <string name="yes_sport">Занимаюсь не менее 1 раза в неделю</string>
    <string name="no_sport">Не занимаюсь</string>
    <string name="good">Здоровое</string>
    <string name="no_good">Не здоровое</string>
    <string name="yes_sleep">Чаще высыпаюсь</string>
    <string name="no_sleep">Чаще не высыпаюсь</string>
    <string name="milis">Больше 2-х раз в год</string>
    <string name="mores">Меньше 2-х раз в год</string>
    <string name="all_live">Все живы или не знаю причин</string>
    <string name="hart">Сердце</string>
    <string name="Insult">Инсульт</string>
    <string name="RAK">Рак</string>
    <string name="srachka">Желудочно-кишечные болезни</string>
    <string name="soogar">Сахарный диабет</string>
    <string name="non_going_hospital">Не помню когда проходил</string>
    <string name="more_year">Более года назад</string>
    <string name="milis_year">Менее года назад</string>
    <string name="no_money">Нет на это денег</string>
    <string name="no_time">Нет на это времени</string>
    <string name="Im_beasy">Просто лень</string>
    <string name="wtf">Я занимаюсь профилактикой</string>
    <string name="error_invalid_password">Неверный пароль</string>
    <string name="error_invalid_Login">Неверный логин</string>
    <string name="_7">+7</string>
    <string name="end_test">Завершиь тест</string>
    <string name="hint_date">ГГГГ-ММ-ДД</string>
    <string name="hint_height">В сантиметрах</string>
    <string name="hint_weight">В килограммах (примерно)</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="date">Дата</string>
    <string name="ist">Значение</string>
    <string name="add">Добавить</string>
    <string name="and">Дополнительно</string>



</resources>
