<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorButton">
            <TextView
                android:id="@+id/textInfoQwests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qwest6"
                android:textColor="@color/colorButtonText"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"
        android:text="@string/get_work" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp">

        <RadioButton
            android:id="@+id/boss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boss" />

        <RadioButton
            android:id="@+id/t_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t_work" />

        <RadioButton
            android:id="@+id/office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/office" />

        <RadioButton
            android:id="@+id/fizical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fizical" />

        <RadioButton
            android:id="@+id/not_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_good" />

        <RadioButton
            android:id="@+id/on_foot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/on_foot" />

        <RadioButton
            android:id="@+id/none_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none_work" />

        <RadioButton
            android:id="@+id/not_is_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_is_it" />
    </RadioGroup>

    <Button
        android:id="@+id/Qw6"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:gravity="center_horizontal|center_vertical|center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        android:text="@string/next" />

</LinearLayout>