<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorButton">
            <TextView
                android:id="@+id/textInfoQwests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qwest16"
                android:textColor="@color/colorButtonText"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"
        android:text="@string/get_hospital" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp">

        <RadioButton
            android:id="@+id/non_going_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/non_going_hospital" />

        <RadioButton
            android:id="@+id/more_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/more_year" />

        <RadioButton
            android:id="@+id/milis_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/milis_year" />

    </RadioGroup>

    <Button
        android:id="@+id/Qw16"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:gravity="center_horizontal|center_vertical|center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        android:text="@string/next" />

</LinearLayout>