<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorButton">
            <TextView
                android:id="@+id/textInfoQwests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qwest3"
                android:textColor="@color/colorButtonText"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"
        android:text="@string/get_height" />


    <EditText
        android:id="@+id/test_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_height"
        android:inputType="date" />

    <Button
        android:id="@+id/Qw3"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:gravity="center_horizontal|center_vertical|center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        android:text="@string/next" />

</LinearLayout>