<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enterPassOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/enterPass"/>
            <EditText
                android:id="@+id/enterPassTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/repeatPass"/>

            <Button
                android:id="@+id/endREG"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_horizontal|center_vertical|center"
                android:background="@color/colorButton"
                android:textColor="@color/colorButtonText"
                android:text="@string/endReg" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>